@@ -1,3 +1,8 @@
+2006-05-17  Andrew Cagney  <cagney@redhat.com>
+
+	* SourceWindow.java: Comment out println calls.
+	* cparser/Tokenizer.java: Ditto.
+
 2006-05-10  Adam Jocksch  <ajocksch@redhat.com>
 
 	* CurrentStackView.java (CurrentStackView): Now adds accessibility
